# nox-ingestor

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  about.toml
.github/workflows/: ci.yaml  docker-build-on-tag.yaml  release.yaml
src/: application.rs  config.rs  error.rs  events.rs  handlers.rs  main.rs  state.rs
src/chain/: client.rs  mod.rs  parser.rs  reader.rs
src/nats/: buffer.rs  client.rs  mod.rs  publisher.rs
