[package]
name = "nox-ingestor"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.5.2", features = ["provider-http", "providers", "rpc-types", "serde", "sol-types"] }
anyhow = "1.0.100"
config = "0.15.19"
config-secret = "0.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["fs","macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
