[package]
name = "nox-ingestor"
version = "0.1.0"
edition = "2024"
license = "BUSL-1.1"

[dependencies]
alloy = { version = "1.5.2", features = ["provider-http", "providers", "rpc-types", "serde", "sol-types"] }
anyhow = "1.0.100"
async-nats = "0.46.0"
axum = "0.8.8"
chrono = { version = "0.4.44", features = ["serde"] }
config = "0.15.19"
config-secret = "0.1.0"
humantime-serde = "1.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["fs","macros", "rt-multi-thread", "signal"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
