[package]
name = "nox-ingestor"
version = "0.1.0"
edition = "2024"
license = "BUSL-1.1"

[dependencies]
alloy = { version = "1.8.2", features = ["provider-http", "providers", "rpc-types", "serde", "sol-types"] }
anyhow = "1.0.102"
async-nats = "0.46.0"
axum = "0.8.8"
axum-prometheus = "0.10.0"
chrono = { version = "0.4.44", features = ["serde"] }
config = "0.15.22"
config-secret = "0.1.0"
humantime-serde = "1.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["fs","macros", "rt-multi-thread", "signal"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
